--- a/app/views/share/_nav.html.erb
+++ b/app/views/share/_nav.html.erb
@@ -18,7 +18,7 @@
         <div class="form-group"></div>
       </form>
       <ul class="nav navbar-nav navbar-right">
-
+        <% if(!student_signed_in? and !faculty_signed_in? and !admin_signed_in?) %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Login<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -35,6 +35,27 @@
               <li><%= link_to "Faculty", new_faculty_registration_path, :method => :get, class: "nav-link"%></li>
             </ul>
           </li>
+        <%else %>
+          <%if(student_signed_in?) %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%="Hi, #{current_student.first_name}" %><span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li ><%= link_to "Log Out", destroy_student_session_path, :method => :delete, class: "nav-link"%></li>
+              </ul>
+            </li>
+          <%elsif faculty_signed_in? %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%="Hi, #{current_faculty.first_name}" %><span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li ><%= link_to "Log Out", destroy_faculty_session_path, :method => :delete, class: "nav-link"%></li>
+              </ul>
+            </li>
+          <%elsif admin_signed_in? %>
+            <li class= "navbar-text"><%="Hi, #{current_admin.first_name}" %> </li>
+            <li class= "navbar-link"><%=link_to "Admin Dashboard", rails_admin_path  %> </li>
+            <li ><%= link_to "Log Out", destroy_admin_session_path, :method => :delete, class: "nav-link"%></li>
+          <%end %>
+        <%end %>
       </ul>
     </div>
   </div>
