--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'sProfileNav' %>
+<%= stylesheet_link_tag 'course' %>
 <link href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet"/>
 <%= javascript_include_tag 'course' %>
 
