--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -9,7 +9,7 @@
       <li><%= link_to "Assignments", class: "nav-link"%></li>
     </ul>
   </div>
-  <div class="container">
+  <div id="list_course" class="container">
     <h1>Courses</h1>
     <table id='coursesTable' class="table table-striped table-bordered">
       <thead>
