--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -9,12 +9,13 @@
       <li><%= link_to "Assignments", class: "nav-link"%></li>
     </ul>
   </div>
-  <div class="container">
+  <div id="register_course" class="container">
     <h1>Courses</h1>
     <table id='registrationsTable' class="table table-striped table-bordered">
       <thead>
       <tr>
         <th>Course Name</th>
+        <th>Date of Registration</th>
         <th>Assignments</th>
       </tr>
       </thead>
@@ -22,7 +23,8 @@
       <% @registrations.each do |registration| %>
         <tr>
           <td><%=registration.course.course_name %></td>
-          <td><%= link_to 'view assignments'%></td>
+          <td><%=registration.registration_datetime.to_date %></td>
+          <td><%= link_to 'View assignments'%></td>
         </tr>
       <% end %>
       </tbody>
