added rspec for course controller

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,7 +5,7 @@
 <% if student_signed_in? then %>
   <div class="navbar navbar-inverse navbar-fixed-left ">
     <ul class="nav navbar-nav">
-      <li><%= link_to "Registered Courses", registrations_path, class: "nav-link"%></li>
+      <li><%= link_to "Registered Courses", enrollments_path, class: "nav-link"%></li>
       <li><%= link_to "Assignments", class: "nav-link"%></li>
     </ul>
   </div>
