--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,7 +3,7 @@
   <br>
   <div id="registration">
     <%if @reg.blank? %>
-      <%= link_to "Register",registrations_path(:param => @course.id),:method => :post, data: {confirm: 'Are you sure you want to register in this course?'}%>
+      <%= link_to "Register",enrollments_path(:param => @course.id),:method => :post, data: {confirm: 'Are you sure you want to register in this course?'}%>
     <%else %>
       <h4 id = "cr_enroll">Enrolled</h4>
     <%end%>
