--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -5,7 +5,7 @@
 <% if student_signed_in? then %>
   <div class="navbar navbar-inverse navbar-fixed-left ">
     <ul class="nav navbar-nav">
-      <li><%= link_to "Registered Courses", registrations_path, class: "nav-link"%></li>
+      <li><%= link_to "Registered Courses", enrollments_path, class: "nav-link"%></li>
       <li><%= link_to "Assignments", class: "nav-link"%></li>
     </ul>
   </div>
@@ -20,10 +20,10 @@
       </tr>
       </thead>
       <tbody>
-      <% @registrations.each do |registration| %>
+      <% @enrollments.each do |enroll| %>
         <tr>
-          <td><%=registration.course.course_name %></td>
-          <td><%=registration.registration_datetime.to_date %></td>
+          <td><%=enroll.course.course_name %></td>
+          <td><%=enroll.registration_datetime.to_date %></td>
           <td><%= link_to 'View assignments'%></td>
         </tr>
       <% end %>
