--- a/app/assets/stylesheets/course.css
+++ b/app/assets/stylesheets/course.css
@@ -16,7 +16,7 @@
 #icon_evaluation_submit, #text_evauluation_submit {
     color: #2fb471
 }
-#cr_desc,#cr_faculty,#cr_fee,#cr_level,#cr_name,#cr_time,#cr_prereq {
+#cr_desc,#cr_faculty,#cr_fee,#cr_level,#cr_name,#cr_time,#cr_prereq,#cr_syllab {
     font-size: 17px;
     font-family: 'Book Antiqua', sans-serif;
 }
