--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -51,4 +51,9 @@
     <h3 id = "cr_desc"><%=@course.description%></h3>
   </div>
 
+  <div>
+    <h2 id ="syllab">Syllabus</h2>
+    <h3 id = "cr_syllab"><%=link_to "#{@course.attachment_identifier}", @course.attachment_url,:target => '_blank'%></h3>
+  </div>
+
 </div>
