--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -16,7 +16,7 @@
       <tr>
         <th>Course Name</th>
         <th>Date of Registration</th>
-        <th>Syllabus</th>
+        <th>Course Material</th>
         <th>Assignments</th>
       </tr>
       </thead>
@@ -25,7 +25,7 @@
         <tr>
           <td><%=enroll.course.course_name %></td>
           <td><%=enroll.registration_datetime.to_date %></td>
-          <td><%= link_to 'View Syllabus',syllabuses_path(name: enroll.course.course_name)%></td>
+          <td><%= link_to 'View Docs',syllabuses_path(name: enroll.course.course_name)%></td>
           <td><%=link_to 'View Assignments',assignments_path(name: enroll.course.course_name)%></td>
         </tr>
       <% end %>
